--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "inputmask": "^5.0.7",
     "just-validate": "^3.3.3",
     "rellax": "^1.12.1",
+    "sharp": "^0.31.2",
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
     "swiped-events": "^1.1.6",
